--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">]
+    
     <title>W. Notícias</title>
 </head>
 <body>
-    <header>
+    <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
 
         <button>
@@ -16,7 +23,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="primeira-secao">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzle colorido">
             <h1>O futuro brilhante da Web 3.0?</h1>
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
@@ -59,7 +66,7 @@
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
             </div>
-            
+
             <div>
                 <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de video game">
                 <div>
