Estilização da segunda seção finalizada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">]
-    
+
     <title>W. Notícias</title>
 </head>
 <body>
@@ -30,14 +30,14 @@
             <button>Ler Mais</button>
         </section>
 
-        <section>
+        <section class="segunda-secao">
             <h2>Novo</h2>
 
-            <div>
+            <div class="margin-borde-padding">
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hidrôgenio alguma vez alcançarão os veiculos elétricos?</p>
             </div>
-            <div>
+            <div margin-borde-padding>
                 <h3>Arte gerada por IA</h3>
                 <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob</p>
             </div>
