Estilização do nav mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <title>W. Notícias</title>
 </head>
-<body>
+<body class="menu-open">
+    
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
 
@@ -22,6 +23,9 @@
         </button>
 
         <nav>
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="icone de X para fecha ro menu">
+            </button>
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
