--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">]
+    <link rel="stylesheet" href="style.css">
+    <script src="./scripts.js" defer></script>
 
     <title>W. Notícias</title>
 </head>
-<body class="menu-open">
+<body>
     
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
