--- a/index.html
+++ b/index.html
@@ -16,28 +16,34 @@
 </head>
 <body>
     
-    <header class="header-mobile">
+    <header>
         <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="icone do menu hamburguer">
         </button>
 
-        <nav>
             <button>
-                <img src="./assets/images/icon-menu-close.svg" alt="icone de X para fecha ro menu">
+                <img src="./assets/images/icon-menu-close.svg" alt="icone de X para fechar o menu">
             </button>
+
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
             <a href="#">Trending</a>
             <a href="#">Categorias</a>
         </nav>
+
+        </header> 
+
     </header>
 
     <main>
         <section class="primeira-secao">
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzle colorido">
+            <picture>
+                <source media="(min-width: 700px)" srcset=".assets/images/image-web-3-desktop.jpg" >
+            </picture>
+
             <h1>O futuro brilhante da Web 3.0?</h1>
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
             <button>Ler Mais</button>
